# course_buddy

./: .env.example  .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt  setup.sh
course_buddy/: __init__.py  cli.py  config.py  intent.py  llm_providers.py
course_buddy/fetch/: canvas_api.py  downloader.py
course_buddy/notes/: postprocess.py  summarizer.py
course_buddy/transcribe/: asr.py
tests/: test_cli.py  test_config.py  test_intent.py  test_refresh.py
