[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "course-buddy"
version = "0.2.0"
description = "SJTU 课程回放 → 转录 → 笔记"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "browser-cookie3>=0.19.0",
]

[project.optional-dependencies]
nlp = ["openai>=1.12.0"]
local = ["faster-whisper>=1.0.0"]
all = ["openai>=1.12.0", "faster-whisper>=1.0.0"]

[project.scripts]
cb = "course_buddy.cli:ask_main"

[tool.setuptools.packages.find]
include = ["course_buddy*"]